# hub_task_python

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 7f58db4252f6_url_model.py
src/: main.py
src/api/: __init__.py  external_api.py  url_router.py
src/config/: settings.py
src/db/: database.py  models.py  schemas.py
src/repositories/: url_repository.py
src/services/: external_api.py  url_shortener.py
